@@ -1,0 +1,4 @@
+galpy.orbit.Orbit.r
+=====================
+
+.. automethod:: galpy.orbit.Orbit.r
