@@ -174,6 +174,27 @@ class OrbitTop(object):
         if onet: return thiso[0]
         else: return thiso[0,:]
 
+    @physical_conversion('position')
+    def r(self,*args,**kwargs):
+        """
+        NAME:
+           r
+        PURPOSE:
+           return spherical radius at time t
+        INPUT:
+           t - (optional) time at which to get the radius
+           ro= (Object-wide default) physical scale for distances to use to convert
+           use_physical= use to override Object-wide default for using a physical scale for output
+        OUTPUT:
+           r(t)
+        HISTORY:
+           2016-04-19 - Written - Bovy (UofT)
+        """
+        thiso= self(*args,**kwargs)
+        onet= (len(thiso.shape) == 1)
+        if onet: return nu.sqrt(thiso[0]**2.+thiso[3]**2.)
+        else: return nu.sqrt(thiso[0,:]**2.+thiso[3,:]**2.)
+
     @physical_conversion('velocity')
     def vR(self,*args,**kwargs):
         """
