@@ -16,6 +16,8 @@ v1.2 (2016-XX-XX)
 - Added PseudoIsothermalPotential, a standard pseudo-isothermal-sphere
   potential.
 
+- Added the spherical radius as an Orbit method.
+
 v1.1 (2015-06-30)
 ==================
 
